Remove deprecated code
427035